animal methods lock added